<resources>
    <string name="app_name">Keyless</string>

    <!-- MainActivity -->
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">LOGIN</string>

    <string name="background_description">Background</string>
    <string name="logo_description">App logo</string>

    <string name="bad_credentials_message">Incorrect username or password</string>

    <string name="code_renewal_period">The codes are renewed each %d min</string>

    <!-- New Door Activity -->
    <string name="door_name">Name</string>
    <string name="door_address">Address</string>
    <string name="door_price">Price</string>
    <string name="door_price_units"> €/month </string>
    <string name="add_door">Add door</string>

    <string name="door_image_description">Door image</string>
    <string name="edit_image_description">Edit image</string>

    <!-- Room Details Acivity -->
    <!-- <string name="door_price_units"> €/month </string> -->
    <!-- <string name="door_image_description">Door image</string> -->
    <string name="details">Door details</string>
    <string name="get_code">GET CODE</string>

    <string name="getting_code">Retrieving code</string>
    <string name="wait">Please wait...</string>

    <string name="retrieved_code">The code for the door is:</string>

    <!-- Notificatons -->
    <string name="channel_name">Door code update</string>
    <string name="code_updated">Code updated</string>
    <string name="code_updated_info">The code for the door %s has been updated</string>

</resources>
