<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:windowTranslucentStatus="false">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_background"
        android:fitsSystemWindows="true"
        android:contentDescription="@string/background_description"/>

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:textColor="#FFFFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#77FFFFFF"
        android:textColorLink="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#77FFFFFF"
        android:textColorLink="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/username_text"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        android:autofillHints="false"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        style="@style/AppTheme.LoginButton"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="@+id/username_text"
        android:layout_height="80dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="@+id/username_text"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:srcCompat="@drawable/app_logo"
        android:contentDescription="@string/logo_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>